2002-06-05  Eli Zaretskii  <eliz@is.elta.co.il>

	* window.c (Fset_window_hscroll): Doc fix.

2002-05-31  Gerd Moellmann  <gerd@gnu.org>

	* xterm.c (x_get_char_face_and_encoding): Add parameter DISPLAY_P.
	Callers changed.

2002-05-31  Eli Zaretskii  <eliz@is.elta.co.il>

	* s/netbsd.h: Include /usr/pkg in the run time shared library path.

2002-05-25  Eli Zaretskii  <eliz@gnu.org>

	* emacs.c (main): Update copyright year.

2002-05-25  Eli Zaretskii  <eliz@is.elta.co.il>

	* xdisp.c (display_mode_element): New argument RISKY; all callers
	changed.  If non-zero, don't use values of variables which are not
	marked as risky-local-variables, and remove text properties from
	string values of such variables.

2002-05-13  Richard M. Stallman  <rms@gnu.org>

	* search.c (search_buffer): Give up boyer moore search if inverse
	translation change charset_base.

2002-05-12  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.c (decode_coding) <coding_type_ccl>: If a lone CR
	characters is carried over from the previous block of text, adjust
	coding->produced to account for the extra character.

2002-05-10  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (enum_font_cb2): Don't use DBCS raster fonts.

2002-05-10  Eli Zaretskii  <eliz@is.elta.co.il>

	* coding.c (encode_coding_sjis_big5): Enclose bitwise AND in
	parens, to ensure correct evaluation order.

2002-05-07  Eli Zaretskii  <eliz@is.elta.co.il>

	* fileio.c (read_non_regular): Remove an extraneous call to Fsignal.

2002-05-06  Jason Rumney  <jasonr@gnu.org>

	* w32bdf.c (w32_load_bdf_font): Set fonts_changed_p.

2002-05-03  Gerd Moellmann  <gerd@gnu.org>

	* indent.c (Fvertical_motion): Move to the start of the line
	containing PT before moving up or down.

2002-04-19  Eli Zaretskii  <eliz@is.elta.co.il>

	* s/sol2-5.h (bcopy, bzero, bcmp): Define only if HAVE_BCOPY is
	not defined.

2002-04-17  Jason Rumney  <jasonr@gnu.org>

	* w32fns.c (Fx_file_dialog): Decode file name before using.
